--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Panel Example</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles1.css">
+  <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
   <div class="playersPanel">
@@ -17,7 +18,13 @@
   </div>
 
   <div class="gameBoard">
-    <div class="board"></div>
+    <div class="board">
+      <div class="places">
+        <div class="group1"></div>
+        <div class="group2"></div>
+        <div class="group3"></div>
+      </div>
+    </div>
   </div>
 
   <script src="scripts.js"></script>
