--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Panel Example</title>
-  <link rel="stylesheet" href="styles1.css">
-  <link rel="stylesheet" href="styles2.css">
+  <title>Shadow Hunter</title>
+  <link rel="stylesheet" href="./css/styles1.css">
+  <link rel="stylesheet" href="./css/styles2.css">
 </head>
 <body>
   <div class="playersPanel">
@@ -19,6 +19,26 @@
 
   <div class="gameBoard">
     <div class="board">
+
+      <div class="healthBar">
+        <div class="health-block">14</div>
+        <div class="health-block">13</div>
+        <div class="health-block">12</div>
+        <div class="health-block">11</div>
+        <div class="health-block">10</div>
+        <div class="health-block">9</div>
+        <div class="health-block">8</div>
+        <div class="health-block">7</div>
+        <div class="health-block">6</div>
+        <div class="health-block">5</div>
+        <div class="health-block">4</div>
+        <div class="health-block">3</div>
+        <div class="health-block">2</div>
+        <div class="health-block">1</div>
+        <div class="health-block">0</div>
+      </div>
+
+
       <div class="places">
         <div class="group1"></div>
         <div class="group2"></div>
@@ -27,7 +47,8 @@
     </div>
   </div>
 
-  <script src="scripts.js"></script>
+  <script src="./js/scripts.js"></script>
+  <script src="./js/init.js"></script>
 </body>
 </html>
 
